--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -1,17 +1,25 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "description": "Proyek UAS dengan Vue.js",
+  "description": "Vue.js frontend for Todo List application",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "axios": "^0.21.1",
+    "core-js": "^3.6.5",
+    "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@vue/cli-service": "^5.0.8"
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-loader": "^16.0.0-beta.3",
+    "vue-template-compiler": "^2.6.11"
   }
 }
